--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,59 @@
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
+@import url('https://rsms.me/inter/inter.css');
+@import url('https://fonts.cdnfonts.com/css/junicode');
+@import url('https://cdn.jsdelivr.net/gh/eliyantosarage/font-awesome-pro@main/fontawesome-pro-6.5.1-web/css/all.min.css');
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  --monoFont: 'JetBrains Mono', 'Courier New', Courier, monospace;
+  --sansDisplay: "InterDisplay", "Helvetica", "Arial", sans-serif;
+  --serifFont: 'Junicode', 'Times New Roman', serif;
+  --sansText: "Inter", "Helvetica", "Arial", sans-serif;
+  --darkBG: #131313;
+  --shadow: 0px 0px 10px 10px rgba(14,13,13,0.08);
+  --bgCol1: #131212;
+  --txtCol1: rgb(230, 230, 230);
+  --txtCol2: rgb(68, 68, 68);
+  --col1: rgb(14, 14, 14);
+  --col2: rgb(12, 12, 189);
+  --col2a:rgb(34, 86, 197);
+  --col3: rgb(170, 20, 95);
+  --col4: rgb(98, 3, 107);
+  --col5: rgb(9, 0, 128);
+  --col6: rgba(31, 31, 31, 0.993);
+  --col7: rgba(255, 255, 255, 0.397);
+  --col8: rgba(27, 27, 27, 0.178);
+  --col9: rgba(179, 179, 179, 0.243);
+  --H1: 40%;
+  --H2: 50%;
+  --H3: 30%;
+  --transparent: rgba(0, 0, 0, 0);
+  --stagger: 100ms;
+  --grey: #3a3a3a;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+h1{
+  font-family: var(--sansDisplay);
+  font-weight: 600;
 }
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+h2{
+  font-family: var(--sansText);
+  font-weight: 700;
 }
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+p{
+  font-family: var(--sansText);
+  font-weight: 400;
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+i{
+  font-style: normal;
+  color: rgb(132, 132, 132);
+  font-family: var(--sansText);
 }
-
-a {
-  color: inherit;
+a{
   text-decoration: none;
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+body{
+  display: flex;
+  background-attachment: fixed;
+  cursor: crosshair;
+  background: var(--darkBG);
+  justify-content: center;
+  align-items: center;
 }
