--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,6 +57,28 @@ body{
   justify-content: center;
   align-items: center;
 }
-nextjs-portal{
-  display: none;
+.loader{
+  content:"";
+  top:  0;
+  left: 0;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  opacity: 0.5;
+  background: hotpink;
+  pointer-events: none;
+  filter: brightness(2) contrast(1) saturate(0);
+  z-index: 300;
+}
+.fourOfour{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.fourOfour h1{
+  color: yellow;
+  font-size: 4em;
+}
+.fourOfour p{
+  color: white
 }
