--- a/src/app/blogs/[slug]/page.module.css
+++ b/src/app/blogs/[slug]/page.module.css
@@ -4,6 +4,7 @@
   --codeCol: rgb(240, 220, 220);
   --titleCol: rgb(232, 218, 218);
   --linkCol: rgb(44, 60, 207);
+  --postBG: rgb(22, 22, 22);
   --preCol: #282c34;
 }
 .title{
@@ -136,7 +137,7 @@ body{
   align-items: center;
   cursor: auto;
   flex-direction: column;
-  color: var(--col9);
+  background: var(--postBG) !important;  
   margin-top: 4em;
 }
 .header img{
