--- a/src/app/component/modal/page.module.css
+++ b/src/app/component/modal/page.module.css
@@ -7,29 +7,64 @@
    width: 100%;
    position: absolute;
    z-index: 4;
-   top: 0; left: 0;
 }
 .linkWrapper{
    width: 100%;
    height: 100%;
    top: 0; left: 0;
    z-index: 1;
-   position: absolute;
-   background-color: rgba(8, 8, 8, 0.76) !important;
+   position: fixed;
+   background-color: rgba(8, 8, 8, 0.24) !important;
    backdrop-filter: blur(5px);
    background-attachment: fixed;
 }
 .imgWrapper{
+   display: inline-flex;
    z-index: 2;
    border-radius: 20px;
    height: 80%;
    aspect-ratio: 4/5;
-   border: 1px solid rgb(63, 63, 63)
+   border: 1px solid rgb(63, 63, 63);
+   box-shadow: 0px 0px 56px 5px black;
+   align-self: center;
+   position: relative;
 }
 .buttons{
-   z-index: 2;
-   background: hotpink !important;
+   position: absolute;
+   display: inline-flex;
+   top: 50%;
+   width: 100%;
+   justify-content: space-between !important;
 }
+.prevBtn{
+   cursor: pointer;
+   margin-left: 2em;
+   aspect-ratio: 1/1;
+   background: rgb(255, 255, 255);
+   border-radius: 50%;
+   height: 45px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.226);
+}
+.nextBtn{
+   cursor: pointer;
+   margin-right: 2em;
+   aspect-ratio: 1/1;
+   background: rgb(255, 255, 255);
+   border-radius: 50%;
+   height: 45px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.226);
+}
+.fa-solid{
+   transform: scale(0.1);
+}
+
+
 /* img{
 
 } */
