--- a/src/app/home/page.module.css
+++ b/src/app/home/page.module.css
@@ -1,4 +1,3 @@
-/*--GRADIENT BACKGROUND--*/
 .gradient{
    height: 100vh;
    width: 100vw;
@@ -29,8 +28,8 @@
    position: fixed;
    animation: two 10s linear infinite;
    border-radius: 50%;
-   height: var(--H1);
-   width: var(--H1);
+   height: var(--H2);
+   width: var(--H2);
    background: radial-gradient(var(--col7), var(--col5), var(--col2));
    filter: blur(100px);
 }
@@ -58,10 +57,21 @@
   50%{top: 32%; left: 37%; opacity: 0.7}
   75%{top: 30%; left: 35%; opacity: 0.5}
 }
-/*-----------------------*/
 @keyframes loadIn {
   from{opacity: 0; transform: scale(1) translateY(20px)}
   to{opacity: 1; transform: scale(1) translateY(0px)}
+}
+.noise{
+  content:"";
+  top:  0;
+  left: 0;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  background: center/20% url('/images/noise.svg') !important;
+  mix-blend-mode: overlay;
+  pointer-events: none;
+  z-index: 10;
 }
 .bento{
   display:grid;
@@ -83,10 +93,12 @@
   grid-template-rows: repeat(14, minmax(1vh, 100px));
   gap: 1em;
 }
-
 .bento > div{
-  background: var(--bgCol1);
+  background: radial-gradient(
+    500px circle at var(--mouse-X) var(--mouse-Y), 
+    rgba(255, 255, 255, calc(var(--opacity) * 3)), transparent 35%);
   color: var(--txtCol1);
+  border-top: 1px solid rgba(102, 101, 101, 0.384);
   position: relative;
   border-radius: 20px;
   box-shadow: var(--shadow);
@@ -102,9 +114,22 @@
   left: 0;
   width: 100%;
   height: 100%;
-  border-top: 1px solid rgb(51, 51, 51);
   pointer-events: none;
-  border-radius: 20px;
+  border-radius: inherit;
+  background: radial-gradient(
+    800px circle at var(--mouse-X) var(--mouse-Y), 
+    rgba(255, 255, 254, var(--opacity)),
+    transparent 20%
+  );
+}
+.bento > div::before{
+  border-radius: inherit;
+  content: '';
+  position: absolute;
+  margin: 1px;
+  top: 0; left: 0;
+  width: calc(100% - 2px); height: calc(100% - 2px);
+  background: var(--bgCol1);
 }
 .engineeringCard{
   justify-content: center;
@@ -120,14 +145,12 @@
   animation-delay: calc(2 * var(--stagger)) !important;
 }
 .productDesignCard::after{
-    top: 0; left: 0;
-    pointer-events: none;
-    height: 100%;
-    width: 100%;
-    content: '';
-    position: absolute;
-    /* background: linear-gradient(270deg, rgba(14, 14, 14, 0.383) 80%, var(--bgCol1) 100%) !important; */
-    z-index: 1;
+  top: 0; left: 0;
+  pointer-events: none;
+  height: 100%;
+  width: 100%;
+  content: '';
+  position: absolute;
 }
 .ornament{
   font-size: 0.6em;
@@ -137,17 +160,11 @@
 .productDesignCard h1{
   font-size: 3em;
   margin: -0.4em 0em 0em 0em;
-  z-index: 10;
   mix-blend-mode: difference;
 }
 .profileCard{
   overflow: hidden;
   position: relative;
-  /* background: radial-gradient(
-    circle at 70% 80%,
-  #13151869 0%,
-  #131518b4 35%,
-  #131518 90%), url('/images/4x5.png')  50% 40% / 80em no-repeat  !important; */
   grid-area: C;
   align-items: end;
   animation-delay: calc(3 * var(--stagger)) !important;
@@ -164,6 +181,7 @@
 .profileCard img{
   position: absolute;
   margin: 0em 0em 0em 8em;
+  filter: contrast(2);
 }
 .mbtiCard{
   grid-area: D;
@@ -201,7 +219,6 @@
   justify-content: center;
   align-items: center;
   animation-delay: calc(5 * var(--stagger)) !important;
-  /* background: rgb(197, 198, 168) !important; */
 }
 .curriculumVitaeCard h1{
   font-family: var(--serifFont);
@@ -209,7 +226,6 @@
   font-size: 3em;
   text-align: left;
   line-height: 90%;
-  /* color: rgb(0, 0, 0); */
 }
 .artCard{
   overflow: hidden;
@@ -224,24 +240,24 @@
   font-family: var(--serifFont);
   font-size: 5em;
   font-weight: 100;
-  z-index: 1;
 }
 
 .codingJourneyCard{
   grid-area: G;
   animation-delay: calc(6 * var(--stagger)) !important;
-  justify-content: center;
   align-items: center;
 }
 .codingJourneyCard h1{
   font-family: var(--monoFont);
   font-weight: 700;
   font-size: 2.5em;
-  text-align: left;
+  text-align: left !important;
   line-height: 90%;
   color: var(--col2);
+  margin-left: 1em !important;
 }
 .instagram{
+  border-top: 0px solid transparent !important;
   align-items: center;
   justify-content: center;
   grid-area: H;
@@ -249,6 +265,7 @@
   box-shadow: 0px 0px 0px 0px solid var(--transparent) !important;
 }
 .linkedin{
+  border-top: 0px solid transparent !important;
   align-items: center;
   justify-content: center;
   align-items: center;
@@ -258,6 +275,7 @@
   box-shadow: 0px 0px 0px 0px solid var(--transparent) !important;
 }
 .youtube{
+  border-top: 0px solid transparent !important;
   align-items: center;
   justify-content: center;
   grid-area: J;
@@ -265,6 +283,7 @@
   box-shadow: 0px 0px 0px 0px solid var(--transparent) !important;
 }
 .twitter{
+  border-top: 0px solid transparent !important;
   grid-area: K;
   align-items: center;
   justify-content: center;
@@ -272,20 +291,30 @@
   box-shadow: 0px 0px 0px 0px solid var(--transparent) !important;
 }
 .footer{
+  border-top: 0px solid transparent !important;
   grid-area: X;
   align-items: center;
   justify-content: center;
   background: var(--transparent) !important;
   box-shadow: 0px 0px 0px 0px solid var(--transparent) !important;
 }
+#foot{
+  border-top: 0px solid transparent !important;
+}
 .instagram::after,
 .linkedin::after,
 .youtube::after,
 .twitter::after,
-.footer::after{
-  border-top: 2px solid var(--transparent) !important;
+.footer::after,
+.instagram::before,
+.linkedin::before,
+.youtube::before,
+.twitter::before,
+.footer::before{
   pointer-events: none;
+  opacity: 0 !important;
 }
+
 .twitter h1{
   font-size: 0.6em;
   color: var(--grey)
@@ -350,7 +379,6 @@
   .productDesignCard h1{
     font-size: 2.1rem;
     margin: 0.3em 0.6em;
-    z-index: 2;
   }
   .profileCard{
     overflow: hidden;
@@ -370,14 +398,12 @@
     margin: 1rem 0.4em;
     line-height: 98%;
     font-weight: 600;
-    z-index: 1;
   }
   .profileCard p{
     margin: -0.1em 1.2em;
     color: var(--txtCol2);
     font-size: 1.2em;
     line-height: 130%;
-    z-index: 1;
   }
   .profileCard img{
     position: absolute;
@@ -425,12 +451,12 @@
     margin: 0.45em 0.3em;
   }
   .codingJourneyCard{
-    align-items: center;
+    display: flex;
     animation-delay: calc(5 * var(--stagger)) !important;
   }
   .codingJourneyCard h1{
     font-family: var(--monoFont);
-    text-align: left;
+    text-align: left !important;
     font-size: 1.2em;
     color: var(--col2);
     margin: 0em 0.5em 0em 0em;
@@ -439,7 +465,6 @@
     align-items: flex-end;
     justify-content: end;
     animation-delay: calc(4 * var(--stagger)) !important;
-    /* background:  linear-gradient(180deg, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 50%, rgb(46, 2, 2) 98%) !important; */
   }
   .artCard h1{
     margin: 0em 0.3em 0.1em 0em;
