--- a/src/app/component/modal/page.module.css
+++ b/src/app/component/modal/page.module.css
@@ -5,29 +5,32 @@
    align-items: center;
    height: 100%;
    width: 100%;
-   position: absolute;
-   z-index: 4;
+   position: fixed;
+   top: 0; left: 0;
 }
 .linkWrapper{
    width: 100%;
    height: 100%;
+   position: absolute;
    top: 0; left: 0;
-   z-index: 1;
-   position: fixed;
-   background-color: rgba(8, 8, 8, 0.24) !important;
+   z-index: 0;
+   background: rgba(8, 8, 8, 0.24) !important;
    backdrop-filter: blur(5px);
-   background-attachment: fixed;
 }
 .imgWrapper{
    display: inline-flex;
-   z-index: 2;
+   z-index: 5;
    border-radius: 20px;
-   height: 80%;
+   width: 80%;
+   max-width: 40em;
+   aspect-ratio: 4/5;
+   max-height: 90%;
    aspect-ratio: 4/5;
    border: 1px solid rgb(63, 63, 63);
    box-shadow: 0px 0px 56px 5px black;
    align-self: center;
    position: relative;
+   overflow: hidden;
 }
 .buttons{
    position: absolute;
