--- a/src/app/component/home/page.module.css
+++ b/src/app/component/home/page.module.css
@@ -2,18 +2,37 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  /* height: 100vh; */
-  /* margin-top: 2em; */
   padding: 2em 0em 2em 0em;
+  /* background: var(--bgCol1); */
 }
-
 .gradient{
    height: 100vh;
    width: 100vw;
    position: fixed;
    top: 0;
    left: 0;
-   background: var(--bgCol1);
+   /* background: var(--bgCol1); */
+   opacity: 1;
+   background: 
+   
+    radial-gradient(ellipse at 50% 0%, rgba(255, 255, 255, 0) 0%, var(--bgCol1) 60%),
+
+    conic-gradient(from 0deg at 50% -5%,
+    var(--bgCol1) 0%,
+    var(--bgCol1) 25%,
+    /* rgba(3, 28, 255, 0.781) 30%, */
+    var(--col2) 40%,
+    var(--col3a) 41%,
+    var(--col2) 45%,
+    var(--col3a) 46%,
+    rgba(3, 28, 255, 0.781) 50%,
+    var(--col3a) 52%,
+    var(--col2) 55%,
+    var(--col3a) 58%,
+    var(--col2) 60%,
+    var(--bgCol1) 75%,
+    var(--col3a) 80%,
+    var(--bgCol1) 100%);
    z-index: -1;
  }
 @keyframes loadIn {
@@ -30,12 +49,11 @@
   background: center/20% url('/images/noise.svg') !important;
   mix-blend-mode: overlay;
   pointer-events: none;
-  z-index: 10;
+  z-index: 6;
 }
 .bento{
   display:grid;
   grid-template-areas: 
-  ". . X . ."
   "A A A A A"
   "A A A A A"
   "B B B B B"
@@ -44,10 +62,10 @@
   "C C C C C"
   "D D E E E"
   "D D G G G"
-  ". H I J K";
+  "X H I J K";
   /* grid-template-columns: repeat(5, minmax(1vw, 80px));
   grid-template-rows: repeat(9, minmax(1vh, 100px)); */
-  grid-template-rows: repeat(10, minmax(1vh, 100px));
+  grid-template-rows: repeat(9, minmax(1vh, 100px));
   grid-template-columns: repeat(5, minmax(1vw, 80px));
   gap: 0.4em;
 }
@@ -255,7 +273,7 @@
   grid-area: X;
   align-items: center;
   justify-content: center;
-  background: var(--transparent) !important;
+  background: transparent !important;
   box-shadow: 0px 0px 0px 0px solid var(--transparent) !important;
 }
 
@@ -347,8 +365,8 @@
   }
   .profileCard h1{
     font-size: 3rem;
-    margin: 1rem 0.4em;
-    line-height: 98%;
+    margin: 1.2rem 0.4em;
+    line-height: 80%;
     font-weight: 500;
   }
   .profileCard p{
@@ -372,9 +390,9 @@
     font-family: var(--serifFont);
     font-style: italic;
     font-weight: 300;
-    font-size: 2.5em;
+    font-size: 3em;
     align-self: center;
-    margin: -0.1em 0em 0em 0em;
+    margin: -0.4em 0em 0em 0em;
   }
   .mbtiCard h2{
     font-weight: 400;
