--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,14 +10,15 @@
   --darkBG: #090909;
   --shadow: 0px 0px 10px 10px rgba(14,13,13,0.08);
   --bgCol1: #0f0f0f; /*this is the background color*/
-  --bgCol2: #151516; /*this is the grid color*/
+  --bgCol2: #141414; /*this is the grid color*/
   --cardBorder: #ca4747;
   --txtCol1: rgb(230, 230, 230);
   --txtCol2: rgb(87, 87, 87); /*text color (p)*/
   --col1: rgb(20, 20, 20);
   --col2: rgb(12, 12, 189);
   --col2a:rgb(34, 86, 197);
-  --col3: rgba(107, 10, 58, 0.623);
+  --col3: rgb(244, 55, 215);
+  --col3a: rgb(93, 5, 255);
   --col4: rgba(98, 3, 107, 0.5);
   --col5: rgba(9, 0, 128, 0.5);
   --col6: rgba(0, 0, 0, 0.993);
@@ -43,27 +44,28 @@
 h1{
   font-family: var(--sansDisplay);
   font-weight: 400;
-  z-index: 3 !important; 
+  z-index: 1;
 }
 h2{
   font-family: var(--sansText);
   font-weight: 400;
-  z-index: 3 !important; 
+  z-index: 1;
 }
 p{
   font-family: var(--sansText);
   font-weight: 400;
-  z-index: 3 !important; 
+  z-index: 1; 
 }
 i{
   font-style: normal;
   color: rgb(132, 132, 132);
   font-family: var(--sansText);
-  z-index: 3 !important;
+  z-index: 1;
 }
 a{
   text-decoration: none;
-  z-index: 3 !important;
+  z-index: 1;
+  
 }
 body{
   /* display: flex; */
@@ -72,6 +74,7 @@ body{
   /* align-items: center; */
   /* height: 100vh; */
   overflow: scroll;
+  background: var(--bgCol1);
   /* width: 100vw; */
 }
 .loader{
@@ -99,6 +102,6 @@ body{
 .fourOfour p{
   color: white
 }
-nextjs-portal{
+/* nextjs-portal{
   display: none;
-}
+} */
