--- a/src/app/component/home/page.module.css
+++ b/src/app/component/home/page.module.css
@@ -3,7 +3,6 @@
   justify-content: center;
   align-items: center;
   padding: 2em 0em 2em 0em;
-  /* background: var(--bgCol1); */
 }
 .gradient{
    height: 100vh;
@@ -11,16 +10,12 @@
    position: fixed;
    top: 0;
    left: 0;
-   opacity: 1;
-   background: 
-   
+   background:
     radial-gradient(ellipse at 50% 0%, rgba(255, 255, 255, 0) 0%, var(--bgCol1) 60%),
     radial-gradient(ellipse at 50% 90%, var(--bgCol1) 0%, transparent 50%),
-
     conic-gradient(from 0deg at 50% -5%,
     var(--bgCol1) 0%,
     var(--bgCol1) 35%,
-    /* rgba(3, 28, 255, 0.781) 30%, */
     var(--col2) 40%,
     var(--col3a) 41%,
     var(--col2) 45%,
@@ -33,7 +28,153 @@
     var(--bgCol1) 65%,
     var(--bgCol1) 100%);
    z-index: -1;
+   animation: flicker 1s infinite linear;
  }
+ .gradient1{
+   height: 100vh;
+   width: 100vw;
+   position: fixed;
+   top: 0;
+   left: 0;
+   background:
+    radial-gradient(ellipse at 50% 0%, rgba(255, 255, 255, 0) 0%, var(--bgCol1) 60%),
+    radial-gradient(ellipse at 50% 90%, var(--bgCol1) 0%, transparent 50%),
+    conic-gradient(from 0deg at 50% -5%,
+    var(--bgCol1) 0%,
+    var(--bgCol1) 35%,
+    var(--col2) 40%,
+    /* var(--col3a) 41%, */
+    var(--col2) 45%,
+    /* var(--col3a) 46%, */
+    rgba(3, 28, 255, 0.781) 50%,
+    /* var(--col3a) 52%, */
+    var(--col2) 55%,
+    /* var(--col3a) 58%, */
+    var(--col2) 60%,
+    var(--bgCol1) 65%,
+    var(--bgCol1) 100%);
+   z-index: -1;
+ }
+ .gradient2{
+   height: 100vh;
+   width: 100vw;
+   position: fixed;
+   top: 0;
+   left: 0;
+   background:
+    radial-gradient(ellipse at 50% 0%, rgba(255, 255, 255, 0) 0%, var(--bgCol1) 60%),
+    radial-gradient(ellipse at 50% 90%, var(--bgCol1) 0%, transparent 50%),
+    conic-gradient(from 0deg at 50% -5%,
+    var(--transparent) 0%,
+    var(--transparent) 35%,
+    var(--transparent) 40%,
+    var(--col3a) 41%,
+    var(--transparent) 45%,
+    /* var(--col3a) 46%, */
+    /* rgba(3, 28, 255, 0.781) 50%, */
+    /* var(--col3a) 52%, */
+    var(--transparent) 55%,
+    /* var(--col3a) 58%, */
+    var(--transparent) 60%,
+    var(--transparent) 65%,
+    var(--transparent) 100%);
+   z-index: -1;
+   mix-blend-mode: lighten ;
+   animation: flicker 3s infinite linear;
+ }
+ .gradient3{
+   height: 100vh;
+   width: 100vw;
+   position: fixed;
+   top: 0;
+   left: 0;
+   background:
+    radial-gradient(ellipse at 50% 0%, rgba(255, 255, 255, 0) 0%, var(--bgCol1) 60%),
+    radial-gradient(ellipse at 50% 90%, var(--bgCol1) 0%, transparent 50%),
+    conic-gradient(from 0deg at 50% -5%,
+    var(--transparent) 0%,
+    var(--transparent) 35%,
+    var(--transparent) 40%,
+    /* var(--col3a) 41%, */
+    var(--transparent) 45%,
+    /* var(--col3a) 46%, */
+    rgba(3, 28, 255, 0.781) 50%,
+    /* var(--col3a) 52%, */
+    var(--transparent) 55%,
+    var(--col3a) 58%,
+    var(--transparent) 60%,
+    var(--transparent) 65%,
+    var(--transparent) 100%);
+   z-index: -1;
+   mix-blend-mode: lighten ;
+   animation: flicker 3.3s infinite ease-in-out;
+   animation-delay: 0.2s;
+ }
+ .gradient4{
+   height: 100vh;
+   width: 100vw;
+   position: fixed;
+   top: 0;
+   left: 0;
+   background:
+    radial-gradient(ellipse at 50% 0%, rgba(255, 255, 255, 0) 0%, var(--bgCol1) 60%),
+    radial-gradient(ellipse at 50% 90%, var(--bgCol1) 0%, transparent 50%),
+    conic-gradient(from 0deg at 50% -5%,
+    var(--transparent) 0%,
+    var(--transparent) 35%,
+    var(--transparent) 40%,
+    /* var(--col3a) 41%, */
+    var(--transparent) 45%,
+    /* var(--col3a) 46%, */
+    rgba(3, 28, 255, 0.781) 50%,
+    var(--col3a) 52%,
+    var(--transparent) 55%,
+    /* var(--col3a) 58%, */
+    var(--transparent) 60%,
+    var(--transparent) 65%,
+    var(--transparent) 100%);
+   z-index: -1;
+   mix-blend-mode: lighten;
+   animation: flicker 2s infinite linear;
+ }
+  .gradient5{
+   height: 100vh;
+   width: 100vw;
+   position: fixed;
+   top: 0;
+   left: 0;
+   background:
+    radial-gradient(ellipse at 50% 0%, rgba(255, 255, 255, 0) 0%, var(--bgCol1) 60%),
+    radial-gradient(ellipse at 50% 90%, var(--bgCol1) 0%, transparent 50%),
+    conic-gradient(from 0deg at 50% -5%,
+    var(--transparent) 0%,
+    var(--transparent) 35%,
+    var(--transparent) 40%,
+    /* var(--col3a) 41%, */
+    var(--transparent) 45%,
+    var(--col3a) 46%,
+    rgba(3, 28, 255, 0.781) 50%,
+    /* var(--col3a) 52%, */
+    var(--transparent) 55%,
+    /* var(--col3a) 58%, */
+    var(--transparent) 60%,
+    var(--transparent) 65%,
+    var(--transparent) 100%);
+   z-index: -1;
+   mix-blend-mode: lighten;
+   animation: flicker 1s infinite linear;
+ }
+
+
+ 
+@keyframes flicker {
+	0%, 19.999%, 22%, 62.999%, 64%, 64.999%, 70%, 100% {
+    opacity: .99;
+	}
+	20%, 21.999%, 63%, 63.999%, 65%, 69.999% {
+		opacity: 0.4;
+	}
+} 
 @keyframes loadIn {
   from{opacity: 0; transform: scale(1) translateY(20px)}
   to{opacity: 1; transform: scale(1) translateY(0px)}
@@ -46,7 +187,7 @@
   height: 100%;
   width: 100%;
   background: center/20% url('/images/noise.svg') !important;
-  mix-blend-mode: overlay;
+  mix-blend-mode: multiply;
   pointer-events: none;
   z-index: 6;
 }
@@ -60,7 +201,7 @@
   "C C C C C"
   "C C C C C"
   "D D E E E"
-  "D D G G G"
+  "D D G G F"
   "X H I J K";
   /* grid-template-columns: repeat(5, minmax(1vw, 80px));
   grid-template-rows: repeat(9, minmax(1vh, 100px)); */
@@ -70,8 +211,8 @@
 }
 .bento > div{
   background: radial-gradient(
-    500px circle at var(--mouse-X) var(--mouse-Y), 
-    rgba(255, 255, 255, calc(var(--opacity) * 3)), transparent 25%);
+    400px circle at var(--mouse-X) var(--mouse-Y), 
+    rgba(255, 255, 255, calc(var(--opacity) * 5)), transparent 25%);
   color: var(--txtCol1);
   position: relative;
   border-radius: var(--rad) !important;
@@ -80,6 +221,12 @@
   display: flex;
   width: 100%;
   height: 100%;
+}
+.bento > div h1,
+.bento > div h2,
+.bento > div p,
+.bento > div a{
+  z-index: 0;
 }
 .bento > div::after{
   content: '';
@@ -91,8 +238,8 @@
   pointer-events: none;
   border-radius: inherit;
   background: radial-gradient(
-    800px circle at var(--mouse-X) var(--mouse-Y), 
-    rgba(255, 255, 254, calc(var(--opacity) * 0.4)),
+    25em circle at var(--mouse-X) var(--mouse-Y), 
+    rgba(255, 255, 254, calc(var(--opacity) * 1)),
     transparent 40%
   );
 }
@@ -118,7 +265,7 @@
   justify-content: center;
   align-items: center;
   grid-area: B;
-  animation-delay: calc(2 * var(--stagger)) !important;
+  animation-delay: calc(1.1 * var(--stagger)) !important;
 }
 .productDesignCard::after{
   top: 0; left: 0;
@@ -136,14 +283,13 @@
 .productDesignCard h1{
   font-size: 3em;
   margin: -0.4em 0em 0em 0em;
-  mix-blend-mode: difference;
 }
 .profileCard{
   overflow: hidden;
   position: relative;
   grid-area: C;
   align-items: end;
-  animation-delay: calc(3 * var(--stagger)) !important;
+  animation-delay: calc(1.2 * var(--stagger)) !important;
 }
 .profileCard h1{
   text-align: left;
@@ -161,7 +307,7 @@
 }
 .mbtiCard{
   grid-area: D;
-  animation-delay: calc(4 * var(--stagger)) !important;
+  animation-delay: calc(1.3 * var(--stagger)) !important;
   overflow: hidden;
   flex-direction: column;
   flex-wrap: wrap;
@@ -196,7 +342,7 @@
   grid-area: E;
   justify-content: center;
   align-items: center;
-  animation-delay: calc(5 * var(--stagger)) !important;
+  animation-delay: calc(1.4 * var(--stagger)) !important;
 }
 .curriculumVitaeCard h1{
   font-family: var(--serifFont);
@@ -212,15 +358,14 @@
   grid-area: F;
   justify-content: center;
   align-items: center;
-  animation-delay: calc(7 * var(--stagger)) !important;
+  animation-delay: calc(1.6 * var(--stagger)) !important;
 }
 .artCard img{
-  width: 10em !important;
   margin: 0 auto;
 }
 .codingJourneyCard{
   grid-area: G;
-  animation-delay: calc(6 * var(--stagger)) !important;
+  animation-delay: calc(1.5 * var(--stagger)) !important;
   align-items: center;
 }
 .codingJourneyCard h1{
@@ -274,6 +419,7 @@
   justify-content: center;
   background: transparent !important;
   box-shadow: 0px 0px 0px 0px solid var(--transparent) !important;
+  animation: none !important;
 }
 
 #foot{
@@ -339,7 +485,7 @@
     justify-content: start;
     align-items: start;
     grid-area: B;
-    animation-delay: calc(2 * var(--stagger)) !important;
+    animation-delay: calc(1.1 * var(--stagger)) !important;
   }
   .engineeringCard h1,
   .productDesignCard h1{
@@ -353,7 +499,7 @@
     overflow: hidden;
     align-items: start;
     flex-direction: column;
-    animation-delay: calc(7 * var(--stagger)) !important;
+    animation-delay: calc(1.7 * var(--stagger)) !important;
   }
   .profileCard::after{
     position: absolute;
@@ -380,7 +526,7 @@
   }
   .mbtiCard{
     grid-area: D;
-    animation-delay: calc(3 * var(--stagger)) !important;
+    animation-delay: calc(1.2 * var(--stagger)) !important;
     justify-content: start;
     align-items: center;
     flex-wrap: nowrap;
@@ -413,7 +559,7 @@
   }
   .curriculumVitaeCard{
     display: flex;
-    animation-delay: calc(6 * var(--stagger)) !important;
+    animation-delay: calc(1.6 * var(--stagger)) !important;
     align-items: center;
     justify-content: flex-start;
   }
@@ -427,7 +573,7 @@
   }
   .codingJourneyCard{
     display: flex;
-    animation-delay: calc(5 * var(--stagger)) !important;
+    animation-delay: calc(1.5 * var(--stagger)) !important;
   }
   .codingJourneyCard h1{
     font-family: var(--monoFont);
@@ -438,21 +584,21 @@
   }
   .artCard{
     justify-content: end;
-    animation-delay: calc(4 * var(--stagger)) !important;
+    animation-delay: calc(1.4 * var(--stagger)) !important;
   }
   .artCard img{
     width: 100% !important;
   }
   .instagram{
-    animation-delay: calc(8 * var(--stagger)) !important;
+    animation-delay: calc(1.8 * var(--stagger)) !important;
   }
   .linkedin{
-    animation-delay: calc(9 * var(--stagger)) !important;
+    animation-delay: calc(1.9 * var(--stagger)) !important;
   }
   .youtube{
-    animation-delay: calc(10 * var(--stagger)) !important;
+    animation-delay: calc(2.0 * var(--stagger)) !important;
   }
   .twitter{
-    animation-delay: calc(11 * var(--stagger)) !important;
+    animation-delay: calc(2.1 * var(--stagger)) !important;
   }
 }
