--- a/src/app/component/modal/page.module.css
+++ b/src/app/component/modal/page.module.css
@@ -13,7 +13,6 @@
   from {
     transform: scale(0);
   }
-
   to {
     transform: scale(100%);
   }
@@ -30,21 +29,23 @@
    z-index: 0;
 }
 .imgWrapper{
-   background: white;
+   background: var(--bgCol2);
    display: flex;
-   border-radius: 20px;
+   border-radius: 18px;
    width: 80%;
    max-width: 40em;
    aspect-ratio: 4/5;
    max-height: 90%;
-   aspect-ratio: 4/5;
    border: 1px solid rgb(63, 63, 63);
    box-shadow: 0px 0px 56px 5px black;
-   align-self: center;
-   position: relative;
    overflow: hidden;
-   animation: slide-up 0.2s cubic-bezier(.78,0,.12,1) forwards;
+   animation: slide-up 0.4s cubic-bezier(.79,-0.01,0,1.26) forwards;
    z-index: 4;
+}
+.imgs{
+   width: 100%;
+   flex-direction: column;
+   position: relative;
 }
 .buttons{
    position: absolute;
